Refactor: Done (hopefully)
