# src/routes/api/userRoutes.js
@@ -8,6 +8,11 @@ const router = Router();
 
 router.post('/signin', validator.validateSigninData(), controller.signInUser());
 router.use(JWT.decodeToken(), controller.getFreshUser());
-router.route('/exams').get(controller.getExams());
+router
+  .route('/exams')
+  .get(controller.getExams())
+  .post(controller.startExam())
+  .delete(controller.submitExam())
+  .put(validator.validateAnswers(), controller.answerExam());
 
 export default router;
